en texts, add about

--- a/about/index.html
+++ b/about/index.html
@@ -11,5 +11,10 @@ title: About me
 	</p>
 	<h2>Hobbies</h2>
 	<p>
-		My hobbies.
+		I am interesting in lot of sports. I love football, I also play for my village as midfielder. Besides that, I
+		run at least 2 times per week and do workout in the gym.
+	</p>
+    <p>
+		I like visiting new places, cities and historical monuments. At home I like watching TV listening to music and
+		play some computer games.
 	</p>
