--- a/school/index.html
+++ b/school/index.html
@@ -1,12 +1,17 @@
 ---
-layout: default
+layout: list
 title: Projects
+collection: projects
 ---
-	<h1>{{ page.title }}</h1>
 
-    <ul class="posts">
-	  {% for project in site.projects %}
+	{% for project in site.projects %}
+		<div class="card">
+			<h2>{{project.title}}</h2>
+			<p>{{project.subject}}</p>
+			<p>{{project.semester}}. semester</p>
+			<p>{{project.language}}</p>
+			<a href="{{ project.url }}" title="{{ project.title }}">Details...</a>
+		</div>
+	{% endfor %}
 
-	    <li><span>{{ project.date | date_to_string }}</span> » <a href="{{ project.url }}" title="{{ project.title }}">{{ project.title }}</a></li>
-	  {% endfor %}
-	</ul>
+
