--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ title: About me
 	<h2>Hobbies</h2>
 	<p>
 		I am interesting in lot of sports. I love football, I also play for my village as midfielder. Besides that, I
-		run at least 2 times per week and do workout in the gym.
+		run at least two times per week and do workout in the gym.
 	</p>
     <p>
 		I like visiting new places, cities and historical monuments. At home I like watching TV listening to music and
