--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 layout: default
 title: Šimon Zaťko
 ---
-<div class="blurb">
+<div>
+	<img class="right" src="/images/photo.jpg" alt="Photo of me" width="250">
 	<h1>Šimon Zaťko</h1>
 	<h2>Student</h2>
 	<h2>FIIT STU Slovakia</h2>
-	photo maybe
+	<p>Hello, this is my static website, created by jekyll.</p>
+	<p>If you want to know more information about me, click <a href="/about">here</a>.</p>
+	<p>I have also list of my school projects with code examples and information about them. You can find it
+		<a href="/school">here</a>.</p>
+	<p>Creation of this site is also documented in section <a href="/documentation">Documentation</a>, where you can find some information
+		about used technologies.
 </div>
