change plugin, add tags

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -3,6 +3,13 @@ layout: default
 title: Documentation
 ---
 <h1>{{ page.title }}</h1>
-<p>
-    This site is project for web publishing.
-</p>
+<p>This site is project for web publishing.</p>
+<p>filters: number of words, date to long, </p>
+<p>plugin: youtube</p>
+
+{% highlight ruby linenos %}
+def foo
+puts 'foo'
+end
+{% endhighlight %}
+
