--- a/about/index.html
+++ b/about/index.html
@@ -18,3 +18,6 @@ title: About me
 		I like visiting new places, cities and historical monuments. At home I like watching TV listening to music and
 		play some computer games.
 	</p>
+
+	<h2>FIIT STU</h2>
+	{% youtube "https://www.youtube.com/watch?v=AxMU7oy6-TE" %}
