--- a/documentation/index.html
+++ b/documentation/index.html
@@ -5,11 +5,8 @@ title: Documentation
 <h1>{{ page.title }}</h1>
 <p>This site is project for web publishing.</p>
 <p>filters: number of words, date to long, </p>
+<p>tags: </p>
 <p>plugin: youtube</p>
 
-{% highlight ruby linenos %}
-def foo
-puts 'foo'
-end
-{% endhighlight %}
+
 
