--- a/about/index.html
+++ b/about/index.html
@@ -20,4 +20,5 @@ title: About me
 	</p>
 
 	<h2>FIIT STU</h2>
-	{% youtube "https://www.youtube.com/watch?v=AxMU7oy6-TE" %}
+	<p>Short video about my university.</p>
+	<!--{% youtube "https://www.youtube.com/watch?v=AxMU7oy6-TE" %}-->
