--- a/about/index.html
+++ b/about/index.html
@@ -16,9 +16,9 @@ title: About me
 	</p>
     <p>
 		I like visiting new places, cities and historical monuments. At home I like watching TV listening to music and
-		play some computer games.
+		playing computer games.
 	</p>
 
 	<h2>FIIT STU</h2>
-	<p>Short video about my university.</p>
+	<p>Here is short video about my university.</p>
 	
