--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Šimon Zaťko
 	<h1>Šimon Zaťko</h1>
 	<h2>Student</h2>
 	<h2>FIIT STU Slovakia</h2>
-	<p>Hello, this is my static website, created by jekyll.</p>
+	<p>Hello, this is my static website, created by <a href="https://jekyllrb.com/">jekyll</a>.</p>
 	<p>If you want to know more information about me, click <a href="/about">here</a>.</p>
 	<p>I have also list of my school projects with code examples and information about them. You can find it
 		<a href="/school">here</a>.</p>
