--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Šimon Zaťko
 	<p>Hello, this is my static website, created by <a href="https://jekyllrb.com/">jekyll</a>.</p>
 	<p>If you want to know more information about me, click <a href="/about">here</a>.</p>
 	<p>I have also list of my school projects with code examples and information about them. You can find it
-		<a href="/school">here</a>.</p>
+		<a href="/projects">here</a>.</p>
 	<p>Creation of this site is also documented in section <a href="/documentation">Documentation</a>, where you can find some information
 		about used technologies.
 </div>
