update documentation site

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -3,14 +3,18 @@ layout: default
 title: Documentation
 ---
 <h1>{{ page.title }}</h1>
-<p>This site is project for web publishing.</p>
+<p>This site is project for web publishing. It is created as static website using jekyll. The site is written
+in HTML, enhanced with jekyll additions. The look of the page is created with CSS.</p>
 <p>I used 3 layouts: <b>default</b> - primary layout with header, footer and content place, <b>list</b> to show our
-    collection of projects and <b>project</b> for showing information about the project with code example.
+    collection of projects and <b>project</b> for showing information about the project with code examples.
     You can click on the links or you can find them directly with urls
     (for example ~{{ site.baseurl }}{% link _projects/AVL-tree.md %})</p>
+<p>These layout uses <b>variables</b> from corresponding sites, where are defined. For example project variables
+    as date, title, subject, semester, language and teacher. It is clever, that I don't need to write just html,
+ but can use these variables and jekyll creates the full content.</p>
 <p>This projects are created as <b>collection</b>. In jekyll I just created corresponding folder with my
     projects in markdown and then listed them easily with the for cycle.</p>
-<p>Jekyll provides a number of useful Liquid additions as <b>filters</b>: number of words, date to long, to integer
+<p>Jekyll provides a number of useful liquid additions as <b>filters</b>: number-of-words, date-to-long, to-integer
     and <b>tags</b>: highlight, baseurl.</p>
 <p>In my site is <b>youtube plugin</b> also used to showing videos directly here. I just had to add this lines in my
     Gemfile and refresh the site:</p>
