--- a/about/index.html
+++ b/about/index.html
@@ -21,4 +21,5 @@ title: About me
 
 	<h2>FIIT STU</h2>
 	<p>Here is short video about my university.</p>
-	
+
+	<!--{% youtube "https://www.youtube.com/watch?v=AxMU7oy6-TE" %}-->
