--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,8 @@ title: About me
 	<h2>Current state</h2>
 	<p>
 		I am student on slovak university of technology - faculty of informatics and information technologies
-		in Bratislava. Besides other subjects, I am working on bachelor's thesis with my supervisor Ing. Ivan Srba, PhD.
+		in Bratislava. Besides other subjects, I am working on bachelor's thesis - Question popularity
+		prediction in CQA systems with my supervisor Ing. Ivan Srba, PhD.
 	</p>
 	<h2>Hobbies</h2>
 	<p>
