--- a/documentation/index.html
+++ b/documentation/index.html
@@ -35,15 +35,15 @@ end
     with elements chapter, sections and para.</p>
 <p>
     This DocBook contains automatic generated <b>table of content, figures and tables</b> in the begin of document.
-    They also reference to specific sites in the document. In the text are also used <b>links</b> to titles of some chapters,
-    created with elements xref.
+    They also reference to specific sites in the document. In the text are also used <b>links</b> to images, tables and
+    titles of some chapters, created with elements xref.
 </p>
 <p>
     In the end of the document is <b>appendix</b> and <b>keywords</b> - index of the most important terms. Last part of the
     document contains <b>bibliography</b>, which is cited in the text.
 </p>
 <p>
-    DocBook has also own <b>XSL file</b>, where is style of the document defined. Here I changed a few attributes,
-    to get more beautiful appearance of my document.
+    DocBook has also own <b>XSL file</b>, where is style of the document defined. Here I changed a few attributes
+    (tables, names of chapters, some spaces, etc.), to get more beautiful appearance of my document.
 </p>
 
