--- a/documentation/index.html
+++ b/documentation/index.html
@@ -47,3 +47,17 @@ end
     (tables, names of chapters, some spaces, etc.), to get more beautiful appearance of my document.
 </p>
 
+<h2>Assignment 3</h2>
+<p>
+    Third assignment was make a XML presentation about some topic and make transformations to XHTML and PDF.
+</p>
+<p>
+    I created <b>XML file</b> with information about AES - Advanced Encryption Standard. I used <b>RelaxNG</b> to validate this document.
+    Next step was create <b>2 XSL files</b> to transform XML files into XHTML or PDF. In these files i used XSL expressions to 
+    get certain part of XML document and then to apply some styles to them. I also used <b>XPATH</b> expressions to do some magic
+    with creating slides and creating number of current slide on footer.
+</p>
+<p>
+    To make a tranformations into XHTML or PDF i used <b>BAT</b> file, where i define used saxon, files which i used and outputs.
+</p>
+
