--- a/documentation/index.html
+++ b/documentation/index.html
@@ -54,8 +54,11 @@ end
 <p>
     I created <b>XML file</b> with information about AES - Advanced Encryption Standard. I used <b>RelaxNG</b> to validate this document.
     Next step was create <b>2 XSL files</b> to transform XML files into XHTML or PDF. In these files i used XSL expressions to 
-    get certain part of XML document and then to apply some styles to them. I also used <b>XPATH</b> expressions to do some magic
-    with creating slides and creating number of current slide on footer.
+    get certain part of XML document and then to apply some styles to them. 
+</p>
+<p>
+    I also used <b>XPATH</b> expressions to do some magic with creating slides and creating number of current slide on footer.
+    In XSL files some style <b>parameters</b> can be simply changed. Then there are applied to all styles in the document.  
 </p>
 <p>
     To make a tranformations into XHTML or PDF i used <b>BAT</b> file, where i define used saxon, files which i used and outputs.
