--- a/documentation/index.html
+++ b/documentation/index.html
@@ -59,7 +59,7 @@ end
 <p>
     I also used <b>XPATH</b> expressions to do some magic with creating slides and creating number of current slide on footer.
     In XSL files some style <b>parameters</b> can be simply changed directly, where they are defined. 
-    Then there are applied to all styles in the document.  
+    Then there are applied to all styles in the document. Slides have also own CSS file, where are the main styles defined. 
 </p>
 <p>
     To make a tranformations into XHTML or PDF i used <b>BAT</b> file, where i define used saxon, files which i used and outputs.
