--- a/documentation/index.html
+++ b/documentation/index.html
@@ -57,7 +57,8 @@ end
     get certain part of XML document and then to apply some styles to them. 
 </p>
 <p>
-    I also used <b>XPATH</b> expressions to do some magic with creating slides and creating number of current slide on footer.
+    I also used <b>XPATH</b> expressions to do some magic with image numbers, with creating slides and creating number of current 
+    slide on footer.
     In XSL files some style <b>parameters</b> can be simply changed directly, where they are defined. 
     Then there are applied to all styles in the document. Slides have also own CSS file, where are the main styles defined. 
 </p>
